@@ -1,6 +1,6 @@
 $Author: Mihai Şucan $
 $URL: http://code.google.com/p/paintweb $
-$Date: 2009-06-20 22:10:21 +0300 $
+$Date: 2009-06-22 22:27:48 +0300 $
 
 Until the end of GSOC:
 
@@ -27,6 +27,8 @@ which shows the image dimensions, where the user can crop and resize the image.
 - flip and rotate image.
 - maybe selection rotate.
 - maybe use .scale() and .translate() for selection manipulation.
+- more per-tool settings. For example, do not share the lineWidth option between 
+tools.
 - tab reordering and grouping.
 
 Further down the road:
